# cargo-ancestor-search

./: readme.md
failing/: Cargo.toml
failing/src/: main.rs
failing/submod/: build.rs
option_1/: Cargo.toml  build.rs
option_1/src/: main.rs
option_1/submod/.cargo/: config.toml
option_2/: Cargo.toml  build.rs
option_2/.cargo/: config.toml
option_2/src/: main.rs
option_3/: Cargo.toml
option_3/.cargo/: config.toml
option_3/chainsearch/: Cargo.toml
option_3/chainsearch/.cargo/: config.toml
option_3/chainsearch/src/: main.rs
option_3/submod/: build.rs
option_3/submod/.cargo/: config.toml
