[package]
name = "chainsearch"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.

[dependencies]
submod = { path = "./submod" }

[workspace]
resolver = "2"
members = ["./submod", "."]
# default-members = ["./submod", "."]
default-members = ["."]
